samples/_failures_safe/1761487462_2a1e58_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a35686f3.c: In function ‘main’:
./samples/SAFE/__tmp_a35686f3.c:153:41: error: expected ‘)’ at end of input
  153 |     if (a < 0 || b < 0 || c < 0 || d < 0
      |        ~                                ^
      |                                         )
./samples/SAFE/__tmp_a35686f3.c:153:5: error: expected declaration or statement at end of input
  153 |     if (a < 0 || b < 0 || c < 0 || d < 0
      |     ^~
